# SynapseAI_Core

./: .gitignore  CMakeLists.txt  COPYING.MIT  COPYING.md  README.md  build.sh
elftools/: CMakeLists.txt
elftools/src/: CMakeLists.txt  TPCElfReader.cpp  TPCElfReader.h  elfTool.cpp  elfTool.h
elftools/src/elfio/: COMMIT
elftools/src/elfio/elfio/: elfio_relocation.hpp
external_includes/: SpecialFuncCoefficients.h  TensorDescriptor.h  gaudi_packets.h  gaudi_tpc_descriptor.h  gc_interface.h  index_space.h  perf_lib_layer_params.h  synapse_api.h  synapse_api_types.h  synapse_common_types.h  synapse_common_types.hpp  tpc_elf_api.hpp  version.h
external_includes/asic_reg/: gaudi_blocks.h
external_includes/asic_reg_structs/: dma_core_regs.h  gaudi_types.h  qman_regs.h  sob_glbl_regs.h  sob_objs_regs.h  sync_mngr_regs.h  sync_object_regs.h  tpc_non_tensor_descriptor_regs.h  tpc_regs.h  tpc_tensor_regs.h
external_includes/gaudi/: SpecialFuncCoefficients_defGen2.h  TPC_IO_REG_SPACE_GEN2.h  gaudi_packets.h  gaudi_tpc_descriptor.h
external_includes/gaudi/asic_reg_structs/: dma_core_regs.h  gaudi_types.h  qman_regs.h  sob_glbl_regs.h  sob_objs_regs.h  sync_mngr_regs.h  sync_object_regs.h  tpc_non_tensor_descriptor_regs.h  tpc_regs.h  tpc_tensor_regs.h
external_includes/gaudi2/: SpecialFuncCoefficients_defGen6.h  TPC_IO_REG_SPACE_GEN6.h  gaudi2_packets.h  gaudi2_tpc_descriptor.h
external_includes/gaudi2/asic_reg/: gaudi2_blocks.h
external_includes/gaudi2/asic_reg_structs/: axuser_regs.h  dma_core_ctx_regs.h  dma_core_regs.h  gaudi2_types.h  ic_lbw_dbg_cnt_regs.h  qman_cgm_regs.h  qman_regs.h  qman_wr64_base_addr_regs.h  sob_glbl_regs.h  sob_objs_regs.h  special_regs_regs.h  sync_object_regs.h  tpc_non_tensor_descriptor_regs.h  tpc_regs.h  tpc_tensor_regs.h
synapse_backend/: CMakeLists.txt
synapse_backend/infra/: heap_allocator.cpp  heap_allocator.h  memory_allocator.cpp  memory_allocator.h
synapse_backend/low_level_driver/: device.h  driver_device.cpp  driver_device.h  gaudi_device.cpp  gaudi_device.h  gaudi_packet_gen.cpp  gaudi_packet_gen.h  hw_abstraction_layer.h  launcher.cpp  launcher.h  program.cpp  program.h  runtime.cpp  runtime.h
synapse_backend/low_level_driver/gaudi/: gaudi_device.cpp  gaudi_device.h  gaudi_packet_gen.cpp  gaudi_packet_gen.h
synapse_backend/low_level_driver/gaudi2/: gaudi2_device.cpp  gaudi2_device.h  gaudi2_packet_gen.cpp  gaudi2_packet_gen.h
synapse_backend/runner/: SpecialFuncCoefficientsGen2.cpp  SpecialFuncCoefficientsGen6.cpp  TensorDescriptorGen2.cpp  TensorDescriptorGen6.cpp  thunk_runner.cpp
synapse_core/: CMakeLists.txt  graph.cpp  graph.h  kernel_db.cpp  kernel_db.h  node.cpp  node.h  recipe.cpp  recipe.h  stream.cpp  stream.h  synapse_core.cpp  synapse_state.cpp  synapse_state.h  tensor.cpp  tensor.h
tests/: CMakeLists.txt  add_test.cpp  avgpool_test.cpp  div_test.cpp  imperative_add_test.cpp  memcpy_test.cpp  sin_test.cpp  test_infra.cpp  test_infra.h
tpc_kernels_db/: CMakeLists.txt
tpc_kernels_db/kernels/gaudi/: batch_norm_fwd_f32.c  cast_bf16_to_f32.c  cast_f32_to_bf16.c  filter_fwd_2d_bf16.c  leakyrelu_f32_gaudi.c  relu6_bwd_bf16.c  relu6_bwd_f32.c  relu6_fwd_bf16.c  relu6_fwd_f32.c  softmax_fcd_bf16.c  softmax_non_fcd_bf16.c  sparse_lengths_sum_bf16_2D_f32_embed.c
tpc_kernels_db/kernels/gaudi2/: customdiv_fwd_f32.c  relu_fwd_bf16.c
tpc_kernels_db/kernels/include/: customdiv_fwd_f32.h  kernel_config.h  relu6_bwd.h  relu6_fwd.h
tpc_kernels_db/src/: CMakeLists.txt  entry_points.cpp  entry_points.hpp  spatial_reduction_kernels.cpp  spatial_reduction_kernels.hpp
tpc_kernels_db/src/gaudi_src/: batch_norm_f32.cpp  batch_norm_f32.hpp  cast_gaudi.cpp  cast_gaudi.hpp  customdiv_fwd_f32.cpp  customdiv_fwd_f32.hpp  filter_fwd_2d_bf16.cpp  filter_fwd_2d_bf16.hpp  leakyrelu_f32_gaudi.cpp  leakyrelu_f32_gaudi.hpp  relu6_all.cpp  relu6_all.hpp  softmax_bf16.cpp  softmax_bf16.hpp  sparse_lengths_sum_bf16.cpp  sparse_lengths_sum_bf16.hpp
